--- a/gyakorlat-06/views/layout.erb
+++ b/gyakorlat-06/views/layout.erb
@@ -3,7 +3,7 @@
   <head>
     <meta content='text/html; charset=utf-8' http-equiv='Content-Type' />
     <title>My Little WebApp</title>
-    <link href="/design.css" media="screen, projection" rel="stylesheet" type="text/css" />
+    <link href="<%= path "/design.css" %>" media="screen, projection" rel="stylesheet" type="text/css" />
   </head>
 
   <body>
@@ -11,7 +11,7 @@
       <div id="header">
         <h1>
           <a href="/">
-            <img src="/images/logo.png">
+            <img src="<%= path "/images/logo.png" %>">
             My Little WebApp
           </a>
         </h1>
