--- a/gyakorlat-08/views/home.erb
+++ b/gyakorlat-08/views/home.erb
@@ -21,3 +21,14 @@
 <p><a href="titkok">Titkok...</a></p>
 <p><a href="logout">Kijelentkezés</a></p>
 <% end %>
+
+<form action="search" method="GET">
+  <fieldset>
+    <legend>Közmondások</legend>
+    <p>
+      <label for="q">Keresett szó:</label>
+      <input type="text" id="q" name="q" />
+    </p>
+    <p><input type="submit" value="Mehet" /></p>
+  </fieldset>
+</form>
