--- a/gyakorlat-08/views/layout.erb
+++ b/gyakorlat-08/views/layout.erb
@@ -10,7 +10,7 @@
     <div class='container'>
       <div id="header">
         <h1>
-          <a href="/">
+          <a href="<%= path "/" %>">
             <img src="<%= path "/images/logo.png" %>">
             My Little WebApp
           </a>
